# budgie-next

./: .gitignore  Makefile.am  README.md  common.mk  configure.ac
demos/: Makefile.am  radial-progress-demo.c
src/: Makefile.am
src/libsolus/: Makefile.am  main.c  radial-progress.c  radial-progress.h  util.h
src/libsolus-ui/: Makefile.am  main.c  radial-progress.c  radial-progress.h  util.h
src/panel/: Makefile.am  main.c  panel-window-private.h  panel-window.c  panel-window.h  theme-manager.c  theme-manager.h
src/panel/x11/: panel-window-x11.c  panel-window-x11.h
